test/libsolidity/syntaxTests/errors/error_location_specifier.sol
error E(uint[] calldata);
// ----
// ParserError 2314: (15-23): Expected ',' but got 'calldata'
